added due date feature

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <input type="text" class="taskInput">
+    <input type="date" class="dueDate">
     <button class="addTaskBtn">+</button>
     <div class="task">
         <ul></ul>
